--- a/index.html
+++ b/index.html
@@ -1,2 +1,182 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <title>Hacking Days 2014</title>
+    <meta name="description" content="Parallax backgrounds with centered content">
+
+    <!-- link href='http://fonts.googleapis.com/css?family=Lobster&effect=anaglyph' rel='stylesheet' type='text/css' -->
+    <link href='http://fonts.googleapis.com/css?family=Days+One&effect=anaglyph' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+
+
+  <body>
+
+    <section class="not-fullscreen">
+      <div class="content-a">
+        <div class="content-b hd font-effect-anaglyph">
+            <div>
+              Senacor
+            </div>
+            <div>
+              Hacking Days 2014
+            </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="fullscreen background parallax" style="background-image:url('iot.jpg');" data-img-width="2000" data-img-height="1000" data-diff="100">
+      <div class="content-a">
+        <div class="content-b">
+        </div>
+      </div>
+    </div>
+
+    <section class="not-fullscreen">
+    <div class="content-a">
+        <div class="content-b font-effect-anaglyph">
+            Internet of Things
+        </div>
+    </div>
+</section>
+
+    <div class="not-fullscreen background parallax" style="background-image:url('tessel.jpg');" data-img-width="900" data-img-height="700" data-diff="100">
+      <div class="content-a">
+        <div class="content-b">
+        </div>
+      </div>
+    </div>
+  
+<section class="not-fullscreen">
+    <div class="content-a">
+        <div class="content-b font-effect-anaglyph">
+            tessel.io
+        </div>
+    </div>
+</section>
+
+<div class="not-fullscreen background parallax" style="background-image:url('dropwizard.jpg');" data-img-width="1433" data-img-height="704" data-diff="100" data-oriz-pos="100%">
+    <div class="content-a">
+        <div class="content-b">
+        </div>
+    </div>
+</div>
+  
+<section class="not-fullscreen">
+    <div class="content-a">
+        <div class="content-b font-effect-anaglyph">
+            dropwizard.io
+        </div>
+    </div>
+</section>
+  
+<div class="fullscreen background parallax" style="background-image:url('springboot_schmal.png');" data-img-width="1440" data-img-height="634" data-diff="100">
+    <div class="content-a">
+        <div class="content-b">
+            <br><br>
+        </div>
+    </div>
+</div>
+
+<section class="not-fullscreen">
+    <div class="content-a">
+        <div class="content-b font-effect-anaglyph">
+            spring boot
+        </div>
+    </div>
+</section>
+  
+<div class="not-fullscreen background parallax" style="background-image:url('mongo.jpg');" data-img-width="650" data-img-height="217" data-diff="100">
+    <div class="content-a">
+        <div class="content-b">
+        </div>
+    </div>
+</div>
+  
+<section class="not-fullscreen">
+    <div class="content-a">
+        <div class="content-b font-effect-anaglyph">
+            mongoDB
+        </div>
+    </div>
+</section>
+  
+  
+<div class="not-fullscreen background parallax" style="background-image:url('mqtt.png');" data-img-width="1407" data-img-height="577" data-diff="100">
+    <div class="content-a">
+        <div class="content-b">
+        </div>
+    </div>
+</div>
+  
+<section class="not-fullscreen">
+    <div class="content-a">
+        <div class="content-b font-effect-anaglyph">
+            mqtt
+        </div>
+    </div>
+</section>
+  
+<div class="not-fullscreen background parallax" style="background-image:url('hivemq.png');" data-img-width="1440" data-img-height="548" data-diff="100">
+    <div class="content-a">
+        <div class="content-b">
+        </div>
+    </div>
+</div>
+  
+<section class="not-fullscreen">
+    <div class="content-a">
+        <div class="content-b font-effect-anaglyph">
+            hiveMQ
+        </div>
+    </div>
+</section>
+  
+<div class="not-fullscreen background parallax" style="background-image:url('react.png');" data-img-width="1432" data-img-height="695" data-diff="100">
+    <div class="content-a">
+        <div class="content-b">
+        </div>
+    </div>
+</div>
+  
+<section class="not-fullscreen">
+    <div class="content-a">
+        <div class="content-b font-effect-anaglyph">
+            react JS
+        </div>
+    </div>
+</section>
+
+<div class="not-fullscreen background parallax" style="background-image:url('http://netdna.webdesignerdepot.com/uploads/2012/12/featured45@wdd2x.jpg');" data-img-width="1684" data-img-height="960" data-diff="100">
+    <div class="content-a">
+        <div class="content-b">
+        </div>
+    </div>
+</div>
+  
+<section class="not-fullscreen">
+    <div class="content-a">
+        <div class="content-b font-effect-anaglyph">
+            <div class="small">
+              <a href="https://tessel.io/">tessel</a>
+              <a href="http://dropwizard.io/">dropwizard</a>
+              <a href="http://projects.spring.io/spring-boot/">spring boot</a>
+              <a href="https://www.mongodb.com/">mongoDB</a>
+              <a href="http://mqtt.org/">mqtt</a>
+              <a href="http://www.hivemq.com/">hiveMQ</a>
+              <a href="http://facebook.github.io/react/">react</a>
+            </div>
+            <div>
+              <a href="bla">github repo</a>
+            </div>
+        </div>
+    </div>
+</section>
+  
+<!-- include jQuery -->
+  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script type="text/JavaScript" src="scrolling.js"></script> 
+
+</body>
 </html>
