alte Dateien gelöscht, spring boot nicht mehr fullscreen

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 </section>
   
-<div class="fullscreen background parallax" style="background-image:url('springboot_schmal.png');" data-img-width="1440" data-img-height="634" data-diff="100">
+<div class="not-fullscreen background parallax" style="background-image:url('springboot_schmal.png');" data-img-width="1440" data-img-height="634" data-diff="100">
     <div class="content-a">
         <div class="content-b">
             <br><br>
