repo url ergänzt

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <a href="http://facebook.github.io/react/">react</a>
             </div>
             <div>
-              <a href="bla">github repo</a>
+              <a href="https://github.com/senacor/Hacking-Days-2014">github repo</a>
             </div>
         </div>
     </div>
