--- a/phonegap/sensor-demo/www/index.html
+++ b/phonegap/sensor-demo/www/index.html
@@ -25,10 +25,10 @@
 				}
 			})
 		};
-		setInterval(function() {readSensor("http:///localhost:8060/sensor/temp","temperature")}, 1000);
-		setInterval(function() {readSensor("http:///localhost:8070/sensor/hum","humidity")}, 1000);
-		setInterval(function() {readSensor("http:///localhost:8080/sensor/light","light")}, 1000);
-		setInterval(function() {readSensor("http:///localhost:8090/sensor/sound","sound")}, 1000);
+		setInterval(function() {readSensor("http:///192.168.2.2:8060/sensor/temp","temperature")}, 1000);
+		setInterval(function() {readSensor("http:///192.168.2.2:8070/sensor/hum","humidity")}, 1000);
+		setInterval(function() {readSensor("http:///192.168.2.2:8080/sensor/light","light")}, 1000);
+		setInterval(function() {readSensor("http:///192.168.2.2:8090/sensor/sound","sound")}, 1000);
 	</script>
 </head>
 <body>
